--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,19 @@
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
-        <module>wx-pub</module>
+        <module>imis-api</module>
+        <module>imis-weixin</module>
+        <module>imis-commons</module>
+        <module>imis-model</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.6.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>1.5.7.RELEASE</version>
+        <relativePath/>
     </parent>
 
     <dependencyManagement>
@@ -39,6 +43,12 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.37</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.18</version>
+                <optional>true</optional>
             </dependency>
         </dependencies>
     </dependencyManagement>
