--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>imis-weixin</module>
         <module>imis-commons</module>
         <module>imis-model</module>
+        <module>imis-gateway</module>
     </modules>
 
     <parent>
